@@ -8,6 +8,9 @@ versions of PyAMF.
 
 0.5 (unreleased)
 ----------------
+ - p.r.encode/p.r.decode both have a new logger kwarg. Supply a logging.Logger
+   instance if you want to see debug output (Ticket:588)
+ - pyamf.TypedObjectClassAlias now forces the class type (Ticket:537)
  - If a call to Decoder.readElement results in an IOError exception, the
    original position of the stream will be restored (Ticket:573)
  - Replaced hardcoded Python implementation title in p.r.gateway.SERVER_NAME
